refactor: 多租户完善调整（AI助手、代码生成）